--- a/index.html
+++ b/index.html
@@ -3,9 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="style.css">
     <title>Coding Tracker</title>
 </head>
 <body>
-    <h1>Coding Practice Tracker</h1>
+    <header>
+        <h1>Coding Practice Tracker</h1>
+        <p>Track your monthly exercise progress by topic.</p>
+    </header>
+
+    <div class="container">
+        <div class="">
+            <div class="">
+                <label for="day">Day</label>
+                <input type="number" id="day" name="day" min="1" max="31" required>
+            </div>
+
+            <div class="">
+                <label for="month">Month</label>
+                <select id="month" name="month"></select>
+            </div>
+
+            <div class="">
+                <label for="year">Year</label>
+                <select id="year" name="year"></select>
+            </div>
+
+            <div class="">
+                <label for="topic">Topic</label>
+                <select id="topic">
+                    <option value="Arrays">Arrays</option>
+                    <option value="Strings">Strings</option>
+                    <option value="Recursion">Recursion</option>
+                    <option value="OOP">OOP</option>
+                    <option value="Other">Other</option>
+                </select>
+            </div>
+
+            <div class="">
+                <label for="count">Solved Exercises</label>
+                <input type="number" id="count" min="1" required>
+            </div>
+
+            <button type="submit" class="">Add Practice</button>
+        </div>
+
+
+        <div class="right-panel">
+            <canvas id="practice-chart"></canvas>
+        </div>
+
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
