update: form styles

--- a/index.html
+++ b/index.html
@@ -18,23 +18,23 @@
     </header>
 
     <div class="container">
-        <div class="">
-            <div class="">
+        <div class="left-panel">
+            <div class="input-group">
                 <label for="day">Day</label>
                 <input type="number" id="day" name="day" min="1" max="31" required>
             </div>
 
-            <div class="">
+            <div class="input-group">
                 <label for="month">Month</label>
                 <select id="month" name="month"></select>
             </div>
 
-            <div class="">
+            <div class="input-group">
                 <label for="year">Year</label>
                 <select id="year" name="year"></select>
             </div>
 
-            <div class="">
+            <div class="input-group">
                 <label for="topic">Topic</label>
                 <select id="topic">
                     <option value="Arrays">Arrays</option>
@@ -45,12 +45,12 @@
                 </select>
             </div>
 
-            <div class="">
+            <div class="input-group">
                 <label for="count">Solved Exercises</label>
                 <input type="number" id="count" min="1" required>
             </div>
 
-            <button type="submit" class="">Add Practice</button>
+            <button type="submit" class="btn-primary">Add Practice</button>
         </div>
 
 
