--- a/index.html
+++ b/index.html
@@ -19,38 +19,40 @@
 
     <div class="container">
         <div class="left-panel">
-            <div class="input-group">
-                <label for="day">Day</label>
-                <input type="number" id="day" name="day" min="1" max="31" required>
-            </div>
+            <form action="" id="practice-form">
+                <div class="input-group">
+                    <label for="day">Day</label>
+                    <input type="number" id="day" name="day" min="1" max="31" required>
+                </div>
 
-            <div class="input-group">
-                <label for="month">Month</label>
-                <select id="month" name="month"></select>
-            </div>
+                <div class="input-group">
+                    <label for="month">Month</label>
+                    <select id="month" name="month"></select>
+                </div>
 
-            <div class="input-group">
-                <label for="year">Year</label>
-                <select id="year" name="year"></select>
-            </div>
+                <div class="input-group">
+                    <label for="year">Year</label>
+                    <select id="year" name="year"></select>
+                </div>
 
-            <div class="input-group">
-                <label for="topic">Topic</label>
-                <select id="topic">
-                    <option value="Arrays">Arrays</option>
-                    <option value="Strings">Strings</option>
-                    <option value="Recursion">Recursion</option>
-                    <option value="OOP">OOP</option>
-                    <option value="Other">Other</option>
-                </select>
-            </div>
+                <div class="input-group">
+                    <label for="topic">Topic</label>
+                    <select id="topic">
+                        <option value="Arrays">Arrays</option>
+                        <option value="Strings">Strings</option>
+                        <option value="Recursion">Recursion</option>
+                        <option value="OOP">OOP</option>
+                        <option value="Other">Other</option>
+                    </select>
+                </div>
 
-            <div class="input-group">
-                <label for="count">Solved Exercises</label>
-                <input type="number" id="count" min="1" required>
-            </div>
+                <div class="input-group">
+                    <label for="count">Solved Exercises</label>
+                    <input type="number" id="count" min="1" required>
+                </div>
 
-            <button type="submit" class="btn-primary">Add Practice</button>
+                <button type="submit" class="btn-primary">Add Practice</button>
+            </form>
         </div>
 
 
